fixing title tag in admin layout

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ready Player One: The Game [Admin Mode]</title>
+  <title>Scoreboard [Admin Mode]</title>
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <link href='http://fonts.googleapis.com/css?family=Press+Start+2P|Play' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    "application", :media => "all" %>
