Scoreboard redesign for the Quest ARG

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -4,10 +4,12 @@
 @import "timeline"
 
 $navbarFontFamily: "Press Start 2P", monospace
-$headingsFontFamily: "Press Start 2P", monospace
+$headingsFontFamily: "Blackmoor", monospace
 $sansFontFamily: "Play", sans-serif
 $baseFontFamily: $sansFontFamily
 $baseFontSize: 16px
+
+$navbarBackground: #512888
 
 @import "bootstrap"
 @import "bootstrap-responsive"
@@ -33,13 +35,13 @@ h3
   textarea
     border-color: red
     color: #bbbbbb
-    
+
 .navbar .nav li
   line-height: 300%
  
 .navbar .brand img 
   margin-right: 0.5em
-  
+
 .datepicker
   td
     cursor: pointer
