--- a/app/views/credits/index.html.erb
+++ b/app/views/credits/index.html.erb
@@ -8,6 +8,9 @@
       <li>Ben Ward</li>
       <li>Joelle Pitts</li>
       <li>Daniel Ireton</li>
+      <li>Ellen urton</li>
+      <li>Stefan Yates</li>
+      <li>Games CLUB</li>
     </ul>
     
     <h2>Website Development</h2>
@@ -88,7 +91,6 @@
   </div>
 
   <div class="span4 logos">
-    <%= link_to image_tag("k-state-first-logo.jpg"), "http://www.k-state.edu/first/" %>
     <%= link_to image_tag("k-state-libraries-logo.jpg"), "http://www.lib.k-state.edu/" %>
     <%= link_to image_tag("itac-logo.jpg"), "http://www.k-state.edu/itac/" %>
     <%= link_to image_tag("cis-logo-purple.png"), "http://cis.k-state.edu/" %>
