--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,6 +21,7 @@
           <ul class="nav">
             <li><%= link_to "Tasks", admin_tasks_path %></li>
             <li><%= link_to "Users", admin_users_path %></li>
+            <li><%= link_to "Factions", admin_factions_path %></li>
             <li><%= link_to "Reports", admin_reports_path %></li>
           </ul>
           <ul class="nav pull-right">
