--- a/app/assets/stylesheets/boards.css.sass
+++ b/app/assets/stylesheets/boards.css.sass
@@ -73,6 +73,9 @@
         float: left
         margin-left: 10%
         width: 20%
+        img
+          width: 30px
+          height: 30px
       .points
         display: inline-block
         float: left
