--- a/app/views/admin/users/history.html.erb
+++ b/app/views/admin/users/history.html.erb
@@ -28,5 +28,24 @@
   <div class="span4">
     <%= render "admin/users/actions", user: @user %>
   </div>
+
+  <h2>Faction Changes</h2>
+
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Changed to Faction</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @faction_changes.each do |change| %>
+      <tr>
+        <th><%= change.created_at %></th>
+        <td><%= change.faction.name %></th>
+      </tr>
+    </tbody>
+    <% end %>
+  </table>
   
 </div>
