--- a/app/views/boards/_user.html.erb
+++ b/app/views/boards/_user.html.erb
@@ -1,23 +1,23 @@
 <li>
  
-  <div class="rank">
-	</div>
+  <div class="rank"></div>
  
   <div class="name">
-		<% if signed_in? && current_user.admin? %>
-			<%= link_to user.name, user_path(user) %>
-		<% else %>
-			<%= user.name %>
-		<% end %>
-	</div>
+    <%= image_tag(user.faction_badge[:url], alt: user.faction_badge[:name], title: user.faction_badge[:name]) if user.faction_badge != {} %>
+    <% if signed_in? && current_user.admin? %>
+      <%= link_to user.name, user_path(user) %>
+    <% else %>
+      <%= user.name %>
+    <% end %>
+  </div>
 
-	<div class="points">
-		<%= user.score(@category) || "foo" %>
-	</div>
+  <div class="points">
+    <%= user.score(@category) || "n/a" %>
+  </div>
 
   <div class="milestones">
-    <% user.milestones.each do |milestone| %>
-      <%= image_tag milestone.icon_url, alt: milestone.name, title: milestone.name %>
+    <% user.milestone_badges.each do |milestone| %>
+      <%= image_tag milestone[:url], alt: milestone[:name], title: milestone[:name] %>
     <% end %>
   </div>
 
