moved fonts.css to import statement

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,6 +2,7 @@
 @import "bootstrap-responsive"
 @import "morris"
 @import "timeline"
+@import "fonts"
 
 $navbarFontFamily: "Press Start 2P", monospace
 $headingsFontFamily: "Blackmoor", monospace
