Updated repo info

--- a/app/views/credits/index.html.erb
+++ b/app/views/credits/index.html.erb
@@ -82,10 +82,10 @@
 
     <h2>Source Code</h2>
     <p>
-      Source code for the scoreboard application is available at 
-      <%= link_to 'http://github/zombiepaladin/scoreboard', 'http://github/zombiepaladin/scoreboard' %>, 
+      Source code for the KSU Quest scoreboard application is available at 
+      <%= link_to 'https://github/TransmediaLabs/KsuQuest', 'https://github.com/TransmediaLab/KsuQuest' %>, 
       released under the 
-      <%= link_to 'MIT License', 'https://github.com/zombiepaladin/scoreboard/blob/master/LICENSE' %>
+      <%= link_to 'MIT License', 'https://github.com/transmedialab/ksuquest/blob/master/LICENSE' %>
     </p>
     
   </div>
