Updated terms and conditions

--- a/app/views/rules/_terms_and_conditions.html.erb
+++ b/app/views/rules/_terms_and_conditions.html.erb
@@ -1,4 +1,36 @@
 <p>
+  Your game ID will be your K-State eID unless you create a pseudonym 
+  in your profile. In either case, you agree to abide by the K-State 
+  student <%= link_to "Code of Conduct", "http://catalog.k-state.edu/content.php?catoid=13&navoid=1412", target: "_blank" %>
+</p>
+
+<p>
   Don't treat anybody or anything in a way you wouldn't want to be 
   treated yourself. We want everyone to have fun. 
+</p>
+
+<p>
+  Don't take anything. No one should get in trouble playing this game.
+</p>
+
+<p>
+ Leave the "trail" the way you find it, so others who might come behind 
+ you can have fun too. Fair is fair. 
+ (Don't worry, there will be places to leave your mark along the way.)
+</p>
+
+<p>
+  Explore. Look for as many clues, codes, story snippets, and puzzles as you can. 
+  They should be here, there, everywhere. We'll try to make sure everything is 
+  marked and obvious enough, but not too obvious. 
+</p>
+
+<p>
+  Don't be afraid to ask for help if you think you have drifted off the path. 
+  There is more help out there than you realize, and you can start at Hale Library. 
+</p>
+
+<p>
+  Have fun, and let us know what you think along the way: 
+  <%= link_to "libucs05@ksu.edu", "mailto:libucs05@ksu.edu" %>.
 </p>
