--- a/app/views/admin/factions/index.html.erb
+++ b/app/views/admin/factions/index.html.erb
@@ -1,19 +1,40 @@
-<h1>The Factions</h1>
+<h1 class="page-header">
+  Faction Admin
+  <%= link_to 'New Faction', new_admin_faction_path, class: "btn btn-primary pull-right" %>
+</h1>
 
-<% @factions.each do |faction| %>
-  <div class="row">
-    <div class="col-md-4">
-      <%= image_tag(faction.icon.url, alt: "#{faction.name} faction badge") if faction.icon %>
-    </div>
-    <div class="col-md-6">
-      <h2><%= faction.name %></h2>
-      <%= faction.description %>
-      <%= link_to('Edit', edit_admin_faction_path(faction), class="btn btn-default" if current_user.admin? %>
-      <%= link_to('Destroy', admin_faction, method: :delete, data: { confirm: 'Are you sure?' } if current_user.admin? %></td>
-    </div>
-  </div>
-<% end %>
 
-<br />
+<table class="faction-table table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Icon</th>
+      <th>Points</th>
+      <th>Description</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @factions.each do |faction| %>
+    <tr>
+      <td>
+        <h2><%= faction.name %></h2>
+      </td>
+      <td>
+        <%= image_tag(faction.icon.url, alt: "#{faction.name} faction badge") if faction.icon %>
+      </td>
+      <td>
+        <%= faction.scores.sum(:points) %>
+      </td>
+      <td>
+        <%= faction.description %>
+      </td>
+      <td>
+        <%= link_to 'Edit', edit_admin_faction_path(faction), class: "btn btn-success btn-small" %>
+        <%= link_to 'Delete', admin_faction_path(faction), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-small" %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<%= link_to 'New Faction', new_faction_path %>
