--- a/app/views/factions/index.html.erb
+++ b/app/views/factions/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @factions.each do |faction| %>
   <div class="row">
-    <div class="span3">
+    <div class="span3 centered">
       <%= image_tag(faction.icon.url, alt: "#{faction.name} faction badge") if faction.icon %>
     </div>
     <div class="span4">
