Added logo to admin layout

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,7 +11,10 @@
   <div class="navbar">
     <div class="navbar-inner">
       <div class="container">
-        <a class="brand" href="/admin/tasks">Scoreboard <small class='text-danger'>Admin Mode</small></a>
+        <a class="brand" href="/admin/tasks">
+          <%= image_tag "KSUQuest_Text_white.png" %>
+          <small class='text-danger'>Admin Mode</small>
+        </a>
         <button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
