Updated Ellen Urton's info

--- a/app/views/credits/index.html.erb
+++ b/app/views/credits/index.html.erb
@@ -8,16 +8,16 @@
       <li>Ben Ward</li>
       <li>Joelle Pitts</li>
       <li>Daniel Ireton</li>
-      <li>Ellen urton</li>
+      <li>Ellen Urton</li>
       <li>Stefan Yates</li>
       <li>Games CLUB</li>
     </ul>
     
     <h2>Website Development</h2>
     <ul class="credits">
-      <li>Robert	Willard</li>
-      <li>Nicholas	Strub</li>
-      <li>Matt	Janssen</li>
+      <li>Robert Willard</li>
+      <li>Nicholas Strub</li>
+      <li>Matt Janssen</li>
       <li>Nathan Bean</li>
     </ul>
     
